fix swagger request and add tags
