# laravel-admin/app/Http/Requests/UpdateInfoRequest.php
@@ -4,8 +4,23 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class updateInfoRequest extends FormRequest
+/**
+ * @OA\Schema(
+ *      title="Update user info requset",
+ *      description="Update user info request body data",
+ * )
+ */
+class UpdateInfoRequest extends FormRequest
 {
+    /**
+     * @OA\Property(
+     *      title="email"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+
     /**
      * Determine if the user is authorized to make this request.
      *
