# laravel-admin/app/Http/Requests/UserCreateRequest.php
@@ -5,8 +5,48 @@ namespace App\Http\Requests;
 use Gate;
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema(
+ *      title="Store User requset",
+ *      description="Store User requset body data"
+ * )
+ */
 class UserCreateRequest extends FormRequest
 {
+    /**
+     * @OA\Property(
+     *      title="first_name"
+     * )
+     *
+     * @var string
+     */
+    public $first_name;
+
+    /**
+     * @OA\Property(
+     *      title="last_name"
+     * )
+     *
+     * @var string
+     */
+    public $last_name;
+    /**
+     * @OA\Property(
+     *      title="email"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+    /**
+     * @OA\Property(
+     *      title="role_id"
+     * )
+     *
+     * @var integer
+     */
+    public $role_id;
+
     /**
      * Determine if the user is authorized to make this request.
      *
