# laravel-admin/app/Http/Requests/UserUpdateRequest.php
@@ -4,8 +4,48 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ * @OA\Schema(
+ *      title="Update User requset",
+ *      description="Update User requset body data"
+ * )
+ */
 class UserUpdateRequest extends FormRequest
 {
+    /**
+     * @OA\Property(
+     *      title="first_name"
+     * )
+     *
+     * @var string
+     */
+    public $first_name;
+
+    /**
+     * @OA\Property(
+     *      title="last_name"
+     * )
+     *
+     * @var string
+     */
+    public $last_name;
+    /**
+     * @OA\Property(
+     *      title="email"
+     * )
+     *
+     * @var string
+     */
+    public $email;
+    /**
+     * @OA\Property(
+     *      title="role_id"
+     * )
+     *
+     * @var integer
+     */
+    public $role_id;
+
     /**
      * Determine if the user is authorized to make this request.
      *
